<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.danielchoi.ternionfinal.AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:text="@string/developersString"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textAlignment="center"
            android:id="@+id/developers"
            android:textSize="40sp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ternion"
            android:id="@+id/imageView2"
            android:contentDescription="@string/logoDescription"/>

        <TextView
            android:text="@string/danielChoi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/daniel"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginStart="10sp" />

        <TextView
            android:text="@string/danielChoiInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/danielInfo"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20sp"/>

        <TextView
            android:text="@string/charlesFanin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/charles"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginStart="10sp"/>

        <TextView
            android:text="@string/charlesFaninInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/charlesInfo"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20sp" />

        <TextView
            android:text="@string/johnSchmitt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/john"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginStart="10sp"/>

        <TextView
            android:text="@string/johnSchmittInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/johnInfo"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20sp" />


    </LinearLayout>

</ScrollView>
